--- a/index.html
+++ b/index.html
@@ -1,13 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+  <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Welcome | Lans Tech</title>
     <link rel="stylesheet" href="assets/css/bootstrap.min.css">
-</head>
-<body>
+    <style type="text/css">
+      .footer_section {
+        background-color: black;
+        color: white;
+      }
+    
+    
+    </style>
+  </head>
+  <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <a class="navbar-brand" href="#">Lans Tech</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
@@ -26,7 +34,7 @@
             </li>
           </ul>
         </div>
-      </nav>
+    </nav>
       <div class="bd-example">
         <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
           <ol class="carousel-indicators">
@@ -74,9 +82,14 @@
         </div>
       </div>
       <div class="container">
-          <h3 class="text-center my-4">ABOUT ME</h3>
+          <h3 class="text-center my-4">ABOUT US</h3>
           <P class="text-center">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente sequi, a fuga quae repellendus, optio neque veniam iste eos mollitia, earum ad porro iure eligendi ratione quam pariatur dignissimos facilis?
+              Lanstech is an Information Technology company that mainly focus on developping and managing
+               softwares both online and Offlinie applications. It is a ssoftware company that its
+                initiative was brought up by a student of Limkokwing University of creative Technology
+                in 2018. After a while he decided to incorporate friends and other software developpers
+                and today the company is in control of or managing Applications for large corporates
+                both in and out of Sierra Leone.
           </P>
       </div>
       <div class="container">
@@ -86,8 +99,10 @@
                 <div class="card" style="width: 18rem;">
                     <img src="assets/slides/slide_1.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
-                      <h5 class="card-title">Cms Built With Php</h5>
-                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                      <h5 class="card-title">Artificial Intelligence Projects</h5>
+                      <p class="card-text">We do Machine coding, Hardware coding, Machine learning, Machine Projects Consultant involving 
+                        Python language
+                      </p>
                       <a href="#" class="btn btn-primary">Go somewhere</a>
                     </div>
                   </div>
@@ -96,8 +111,9 @@
                     <div class="card" style="width: 18rem;">
                         <img src="assets/slides/slide_3.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
-                          <h5 class="card-title">Facebook Clone</h5>
-                          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                          <h5 class="card-title">Application Development</h5>
+                          <p class="card-text">We do Mobile Development, Desktop App Development, 
+                            Online and Offlinie App Development, We serve as Application Development Projects Consultant</p>
                           <a href="#" class="btn btn-primary">Go somewhere</a>
                         </div>
                       </div>
@@ -106,15 +122,26 @@
                         <div class="card" style="width: 18rem;">
                             <img src="assets/slides/slide_2.jpg" class="card-img-top" alt="...">
                             <div class="card-body">
-                              <h5 class="card-title">Uber Clone</h5>
-                              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                              <h5 class="card-title">Website Projects</h5>
+                              <p class="card-text">We do Web Application Development,
+                                 Website Development,Website consultancy, Manage and Secure Websites.</p>
                               <a href="#" class="btn btn-primary">Go somewhere</a>
                             </div>
                           </div>
                     </div>
           </div>
       </div>
+      <div class="footer_section">
+        <footer>
+          For more information,<a href="https://lanstech.github.io">check our website</a>,
+           check our <a href="lanstech.facebook">facebook page</a>or contact us +23288208655 <br/>
+           Design and Developed by Lansana Kamara 905001462 
+
+
+        </footer>
+
+      </div>
     <script type="text/javascript" src="assets/js/jquery-2.1.1.min.js"></script>
     <script type="text/javascript" src="assets/js/bootstrap.min.js"></script> 
-</body>
+  </body>
 </html>
